--- a/ContactUs.html
+++ b/ContactUs.html
@@ -51,7 +51,7 @@
                 <td width="210">&nbsp;</td>
             </tr>
             <tr bgcolor="02021E">
-                <td colspan="2" height="57" id="tagline" nowrap="nowrap" valign="middle"><span class="style2">1647 Blake Avenue, Los Angeles, CA 90031 Phone: 323.343.9450 Fax: 323.343.9753 </span></td>
+                <td colspan="2" height="57" id="tagline" nowrap="nowrap" valign="middle"><span class="style2">15350 Proctor Ave Unit #A, City of Industry, CA 91745 Phone: 323.343.9450 Fax: 323.343.9753 </span></td>
                 <td width="210">&nbsp;</td>
             </tr>
             <tr>
