--- a/ContactUs.html
+++ b/ContactUs.html
@@ -85,7 +85,7 @@
                                 <td class="bodyText">
                                     <p align="center" class="style6">Mailers Engineering is located at 15350 Proctor Ave Unit #A, City of Industry, CA 91745 Phone: 323.343.9750 Fax: 323.343.9753</p>
 
-                                    <p align="center" class="style4">Email: <span class="style7"><a href="mailto:info@mailersengineering.com">info@mailersengineering.com</a></span></p>
+                                    <p align="center" class="style4">Email: <span class="style7"><a href="mailto:greg@mailersengineering.com">greg@mailersengineering.com</a></span></p>
 
                                     <p align="center" class="style4">Technical Support: <a href="mailto:support@mailersengineering.com">support@mailersengineering.com</a></p>
 
