--- a/ContactUs.html
+++ b/ContactUs.html
@@ -89,7 +89,7 @@
 
                                     <p align="center" class="style4">Technical Support: <a href="mailto:support@mailersengineering.com">support@mailersengineering.com</a></p>
 
-                                    <p align="center" class="style4"><img alt="Map" height="702" src="images/mapprint.gif" width="702" /></p>
+                                    <p align="center" class="style4"><img alt="Map" height="702" src="images/Screen Shot 2020-08-12 at 11.31.05 AM.png" width="702" /></p>
 
                                     <p>&nbsp;</p>
                                 </td>
