--- a/index.html
+++ b/index.html
@@ -1,173 +1,130 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<!-- DW6 -->
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <!-- Copyright 2005 Macromedia, Inc. All rights reserved. -->
-    <title>Mailers Engineering</title>
-    <meta content="Mailing Equipment; Tabbers; inkjet printers; folders; stamp affixers; stamp machine; fast dry ink; high speed production inkjet bases; tabbers; inserters; folders; feeders; match-rite camera system; grutzmacher; mosca; Domino; Domino L400; Domino L Series;mailing; data-pac; mailcrafter; postmasters; postmasters meter machine; feeder; tabs; bulk ink system; 
-labelers; counters; stamp affixers; letter opener; strappers; postage scales; bunn; polychem; twine; collins ink; versatile; jet cette; netjet; wavejet; winkjet; rebuilt mailing machines; kirk Rudy; streamfeeder; surefeed; straight shooter; mailcrafter; camera system; match rite system; inserco mfg.; olden counters; mailbags; special equipments; bunn; ty-tech; polychem; tying machine; Kirk Rudy Parts; Bell &amp; Howell Parts; Accufast Parts; Streamfeeder Parts; Surefeed Parts; Straightshooter Parts; Straight Shooter Parts; Profold Parts; Folder Parts; Postmatic Parts; General IQ; Satori; Mailers +4; BCC Software; Melissa Data; USPS; Aqueous Ink; Tray Tags; Sack Tags; Bag Tags; Labels; Barcode Checker; Barcode; Mailbags; Color Inks; text/html; charset=iso-8859-1"
-        http-equiv="Content-Type" />
-    <link href="mm_entertainment.css" rel="stylesheet" type="text/css" />
-    <style type="text/css">
-
-    </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=width-device, inital-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Authentic Grace</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <script src="https://kit.fontawesome.com/d1375fa010.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Laila|Roboto&display=swap" rel="stylesheet">
 </head>
 
-<body bgcolor="#ffffff">
-    <p>.</p>
+<body>
+    <header>
+        <div class="header-left">
+            <a href="index.html" class="login">Home</a>
+        </div>
+        <div class="header-right">
+            <a href="#"><i class="fas fa-search fa-2x"></i></a>
+            <a href="#"><i class="fas fa-shopping-cart fa-2x"></i></a>
+        </div>
+    </header>
+    <div class="container">
+        <h1>Mailers Engineering Inc.</h1>
+    </div>
+    <div class="btn-wrapper">
+        <a href="Brochures.html" class="btn arrivals">Brochures</a>
+        <a href="Links.html" class="btn tops">Videos/Web Support</a>
+        <a href="bottoms.html" class="btn bottoms">Ink Recycle Policy</a>
+    </div>
+    <div class="blog">
+        <a href="#"><img src="Screen Shot 2019-08-13 at 2.08.16 PM.png" alt="women laughing together"></a>
+        <div class="blog-text">Visit our blog.</div>
+    </div>
+    <div class="pic-title">
+        <h1>Available Machines</h1>
+    </div>
+    <table class="img-container">
+        <tr>
+            <td class="img-box">
+                <a href="tops.html"><img src="beautiful-carefree-casual-1271702.jpg" alt="woman in plaid shirt and long skirt" width="300" height="300"></a>
+                <a href="tops.html">
+                    <p>Tops</p>
+                </a>
+            </td>
+            <td class="img-box">
+                <a href="bottoms.html"><img src="beautiful-blur-close-up-227288.jpg" alt="woman wearing jeans" width="300" height="300"></a>
+                <a href="bottoms.html">
+                    <p>Bottoms</p>
+                </a>
+            </td>
+            <td class="img-box">
+                <a href="dresses.html"><img src="aircrafts-dawn-daylight-2413424.jpg" alt="woman wearing dress" width="300" height="300"></a>
+                <a href="dresses.html">
+                    <p>Dresses&Rompers</p>
+                </a>
 
-    <table border="0" cellpadding="0" cellspacing="0" width="100%">
-        <tbody>
-            <tr bgcolor="02021e">
-                <td colspan="4" nowrap="nowrap" rowspan="2">
-                    <div align="center"><img alt="Header image" border="0" height="72" src="images/ME logo.jpg" width="114" /></div>
-                </td>
-                <td align="left" colspan="3" height="58" id="logo" nowrap="nowrap" valign="middle"><span class="style1">Mailers Engineering, Inc.</span></td>
-                <td width="6">&nbsp;</td>
-            </tr>
-            <tr bgcolor="02021E">
-                <td colspan="3" height="61" id="tagline" nowrap="nowrap" valign="middle"><span class="style2">15350 Proctor Ave Unit #A, City of Industry, CA 91745 Phone:323.343.9750 Fax: 323.343.9753 </span></td>
-                <td width="6">&nbsp;</td>
-            </tr>
-            <tr>
-                <td bgcolor="#cc3300" colspan="8"><img alt="" border="0" height="2" src="images/mm_spacer.gif" width="1" /></td>
-            </tr>
-            <tr>
-                <td colspan="8"><img alt="" border="0" height="2" src="images/mm_spacer.gif" width="1" /></td>
-            </tr>
-            <tr>
-                <td bgcolor="#cc3300" colspan="8"><img alt="" border="0" height="1" src="images/mm_spacer.gif" width="1" /></td>
-            </tr>
-            <tr>
-                <td colspan="8">&nbsp;<br /> &nbsp;
-                </td>
-            </tr>
-            <tr>
-                <td height="370" valign="top" width="175">
-                    <table border="0" cellpadding="0" cellspacing="0" id="navigation" width="175">
-                        <tbody>
-                            <tr>
-                                <td height="40" width="175"><a href="Equipment.html">Equipment</a></td>
-                            </tr>
-                            <tr>
-                                <td height="40" width="175"><a href="Parts.html">Parts</a></td>
-                            </tr>
-                            <tr>
-                                <td height="40" width="175"><a href="Supplies.html">Supplies</a></td>
-                            </tr>
-                            <tr>
-                                <td height="40" width="175"><a href="Brochures.html">Brochures</a></td>
-                            </tr>
-                            <tr>
-                                <td height="40" width="175"><a href="ContactUs.html">Contact Us </a></td>
-                            </tr>
-                            <tr>
-                                <td height="40" width="175"><a href="Links.html">Technical Bulletin, Links, Videos and Web Support </a></td>
-                            </tr>
-                            <tr>
-                                <td height="40"><span class="style7"><a href="pdf/NetJet NS.pdf">Featured Item </a></span></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </td>
-                <td bgcolor="#445DA0" width="1"><img alt="" border="0" height="1" src="images/mm_spacer.gif" width="1" /></td>
-                <td width="50"><img alt="" border="0" height="1" src="images/mm_spacer.gif" width="50" /></td>
-                <td colspan="2" valign="top"><img alt="" border="0" height="1" src="images/mm_spacer.gif" width="304" />
-                    <table border="0" cellpadding="0" cellspacing="0" width="600">
-                        <tbody>
-                            <tr>
-                                <td class="pageName" height="41" width="600">
-                                    <div align="center">Welcome</div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="bodyText">
-                                    <p align="justify" class="style3">Mailers Engineering, Inc. has over 40 years of mailing equipment experience. We can provide small start-up mailing systems or large high speed production inkjet bases, tabbers, inserters, folders, feeders, labelers,
-                                        stamp affixers, letter openers, strapping machines, postage scales and rebuilt equipment. We are the authorized Kirk Rudy Dealer in Southern California, Arizona and Southern Nevada.</p>
-
-                                    <p align="center" class="pageName">Our Mission</p>
-
-                                    <p align="justify" class="style3">Mailers Engineering, Inc. is the leading independent business provider of a complete line of new and rebuilt mailing products in the Southern California area, with the ability to select from a variety of manufacturers.
-                                        In 1973 the organization was formed and dedicated to the support of the customer's needs, in both customer service and product excellence. We strive to provide the most cost effective products in the mailing industry
-                                        including equipment that are production oriented and trouble free with complete follow through and on-going service support at a reasonable cost</p>
-
-                                    <p align="center" class="pageName">We represent the following manufacturers in the Mailing Industry:</p>
-
-                                    <p align="justify"><span class="style3">Automecha Manufacturing; Baumfolder; Bunn Tying Machines; EAM Mosca, Inserco Manufacturing; Kirk Rudy Incorporated; Postmatic; Profold Incorporated; Secap-Bryce; Streamfeeder ; Straight Shooter; Surefeed Engineering</span></p>
-
-                                    <p align="justify">&nbsp;</p>
-
-                                    <p align="center" class="pageName style5">Mailers Engineering, Inc. is a proud member of the following associations:</p>
-
-                                    <p align="center"><img alt="Aimed" border="3" height="74" src="images/AIMED.jpg" width="92" /> <img alt="MFSA" border="3" height="74" src="images/MFSA.jpg" width="92" /></p>
-
-                                    <p align="center">&nbsp;</p>
-
-                                    <p align="center" class="style3">Our latest endeavor is a motorized kick-out attachment for chain delivery envelope inserters, which replaces the postage meter and provides the speed for proper shingle feeding to the conveyor.</p>
-
-                                    <p align="justify">&nbsp;</p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="bodyText">
-                                    <p>&nbsp;</p>
-
-                                    <p>&nbsp;</p>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </td>
-                <td width="50"><img alt="" border="0" height="1" src="images/mm_spacer.gif" width="50" /></td>
-                <td valign="top" width="490"><img alt="" border="0" height="10" src="images/mm_spacer.gif" width="1" />
-                    <table border="0" cellpadding="0" cellspacing="0" width="377">
-                        <tbody>
-                            <tr>
-                                <td align="center" class="sidebarHeader" colspan="3" id="sidebarHeader">
-                                    <div align="center">Featured Equipment</div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td width="11">&nbsp;</td>
-                                <td class="smallText" id="sidebar" width="345">
-                                    <p align="center">
-                                        <a href="pdf/KR 535.pdf"><img alt="image 1" border="0" height="283" src="images/KR_535.jpg" vspace="6" width="215" /></a><br />
-                                        <span class="style6">Kirk Rudy 535 Tabmaster </span><br />
-                                        <a href="pdf/KR 535.pdf">KR 535 Tabmaster Brochure</a></p>
-
-                                    <p align="center">
-                                        <a href="pdf/KR 545T.pdf"><img alt="image 2" border="0" height="240" src="images/kr545t.jpg" vspace="6" width="320" /></a><br />
-                                        <span class="style6">Kirk Rudy 545T Mail Tabber</span><br />
-                                        <a href="pdf/KR 545D.pdf">KR 545D Mail Tabber Brochure</a></p>
-
-
-                                    <div align="center">
-                                        <a href="Videos/B&amp;H Kickout.avi"><img alt="B&amp;H Kickout" border="0" height="273" src="images/B&amp;H Kickout 1.jpg" width="161" /></a>
-                                        <a href="Videos/B&amp;H Kickout.avi"><img alt="B&amp;H Kickout 2" border="0" height="272" src="images/B&amp;H Kickout 2.JPG" width="177" /></a><br /> &nbsp;
-                                        <img alt="" border="0" height="1" src="images/mm_spacer.gif" width="40" /><br />
-                                        <span class="style6">&nbsp;Motorized Kick-Out</span><br /> &nbsp;
-                                    </div>
-                                </td>
-                                <td width="3">&nbsp;</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </td>
-                <td width="6">&nbsp;</td>
-            </tr>
-            <tr>
-                <td width="175"><span class="style4">Created by Jacklyn Wurtz</span></td>
-                <td width="1">&nbsp;</td>
-                <td width="50">&nbsp;</td>
-                <td width="3">&nbsp;</td>
-                <td width="859">&nbsp;</td>
-                <td width="50">&nbsp;</td>
-                <td width="490">&nbsp;</td>
-                <td width="6">&nbsp;</td>
-            </tr>
-        </tbody>
+            </td>
+        </tr>
+        <tr>
+            <td class="img-box">
+                <a href="outerwear.html"><img src="sweater-nude.jpg" alt="woman wearing sweater and knit hat" width="300" height="300"></a>
+                <a href="outerwear.html">
+                    <p>Outerwear</p>
+                </a>
+            </td>
+            <td class="img-box">
+                <a href="accessories.html"><img src="scarf-tribal.jpg" atl="woman wearing scarf" width="300" height="300"></a>
+                <a href="accessories.html">
+                    <p>Shoes&Accessories</p>
+                </a>
+            </td>
+            <td class="img-box">
+                <a href="sale.html"><img src="beautiful-black-hat-fashion-2729638.jpg" alt="woman wearing jumpsuit" width="300" height="300"></a>
+                <a href="sale.html">
+                    <p>Sale</p>
+                </a>
+            </td>
+        </tr>
     </table>
+
+
+    <div class="testimonial">
+        <h1>What our customers are saying...</h1>
+        <p>"Practically my entire wardrobe is from Authentic Grace. I love that their clothes are simple, but stylish." - Carly B.</p>
+        <br>
+        <br>
+        <br>
+        <p>"With Authentic Grace, I've finally realized you don't have to sacrifice style for comfort." - Melissa G.</p>
+        <br>
+        <p>"As a stay-at-home-mom on a budget, I appreciate that Authentic Grace lets me be fashionable without breaking the bank." - Lindsey L.</p>
+    </div>
+    <div class="menu">
+        <div class="column">
+            <h1>SHOP</h1>
+            <p><a href="newarrivals.html">New Arrivals</a></p>
+            <p><a href="tops.html">Tops</a></p>
+            <p><a href="bottoms.html">Bottoms</a></p>
+            <p><a href="dresses.html">Dresses & Rompers</a></p>
+            <p><a href="outerwear.html">Outerwear</a></p>
+            <p><a href="accessories.html">Shoes & Accessories</a></p>
+            <p><a href="sale.html">Sale</a></p>
+        </div>
+        <div class="column">
+            <h1>CONNECT</h1>
+            <p class="social">
+                <a href="https://www.facebook.com/MailersEngineeringInc" target="_blank"><i class="fab fa-facebook fa-3x"></a></i>
+
+
+            </p>
+        </div>
+        <div class="column">
+            <h1>ABOUT</h1>
+            <p><a href="#">FAQ</a></p>
+            <p><a href="#">Technical Support</a></p>
+
+            <p><a href="#">Ink Recycle Policy</a></p>
+        </div>
+    </div>
+    <footer>
+        <p class="address">15350 Proctor Ave Unit A City of Industry, CA 92587</p>
+        <p class="phone">323-343-9750 </p>
+        <p class="copyright"><i class="far fa-copyright"></i> 2020 Mailers Engineering Inc.</p>
+    </footer>
+    </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
