--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=width-device, inital-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Authentic Grace</title>
+    <title>Mailers Engineering Inc.</title>
     <link rel="stylesheet" href="stylesheet.css">
     <script src="https://kit.fontawesome.com/d1375fa010.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa|Laila|Roboto&display=swap" rel="stylesheet">
@@ -31,7 +31,13 @@
     </div>
     <div class="blog">
         <a href="#"><img src="Screen Shot 2019-08-13 at 2.08.16 PM.png" alt="women laughing together"></a>
-        <div class="blog-text">Visit our blog.</div>
+        <div class="blog-text">Mailers Engineering, Inc. has over 40 years of mailing equipment experience. We can provide small start-up mailing systems or large high speed production inkjet bases, tabbers, inserters, folders, feeders, labelers, stamp affixers, letter openers,
+            strapping machines, postage scales and rebuilt equipment. We are the authorized Kirk Rudy Dealer in Southern California, Arizona and Southern Nevada.Mailers Engineering, Inc. is the leading independent business provider of a complete line
+            of new and rebuilt mailing products in the Southern California area, with the ability to select from a variety of manufacturers. In 1973 the organization was formed and dedicated to the support of the customer's needs, in both customer service
+            and product excellence. We strive to provide the most cost effective products in the mailing industry including equipment that are production oriented and trouble free with complete follow through and on-going service support at a reasonable
+            cost.
+
+        </div>
     </div>
     <div class="pic-title">
         <h1>Available Machines</h1>
@@ -106,8 +112,8 @@
             <h1>CONNECT</h1>
             <p class="social">
                 <a href="https://www.facebook.com/MailersEngineeringInc" target="_blank"><i class="fab fa-facebook fa-3x"></a></i>
-
-
+                <a href="https://www.yelp.com/biz/mailers-engineering-inc-city-of-industry?utm_campaign=www_business_share_popup&utm_medium=copy_link&utm_source=(direct)" target="_blank"><i class="fab fa-yelp fa-3x"></i></a></i>
+                <a href="https://www.linkedin.com/company/mailers-engineering/" target="_blank"><i class="fab fa-linkedin-in fa-3x"></a></i>
             </p>
         </div>
         <div class="column">
