--- a/Links.html
+++ b/Links.html
@@ -71,7 +71,7 @@
                 <td width="527">&nbsp;</td>
             </tr>
             <tr bgcolor="02021E">
-                <td colspan="2" height="57" id="tagline" nowrap="nowrap" valign="middle"><span class="style8">1647 Blake Avenue, Los Angeles, CA 90031 Phone: 323.343.9750 Fax: 323.343.9753 </span></td>
+                <td colspan="2" height="57" id="tagline" nowrap="nowrap" valign="middle"><span class="style8">15350 Proctor Ave Unit A City of Industry, CA 91745 Phone: 323.343.9750 Fax: 323.343.9753 </span></td>
                 <td width="527">&nbsp;</td>
             </tr>
             <tr>
