--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="header-right">
             <a href="#"><i class="fas fa-search fa-2x"></i></a>
-            <a href="#"><i class="fas fa-shopping-cart fa-2x"></i></a>
+            <a href="#"><i class="fas fa-envelope fa-2x"></i></a>
         </div>
     </header>
     <div class="container">
@@ -32,10 +32,9 @@
     <div class="blog">
         <a href="#"><img src="Screen Shot 2019-08-13 at 2.08.16 PM.png" alt="women laughing together"></a>
         <div class="blog-text">Mailers Engineering, Inc. has over 40 years of mailing equipment experience. We can provide small start-up mailing systems or large high speed production inkjet bases, tabbers, inserters, folders, feeders, labelers, stamp affixers, letter openers,
-            strapping machines, postage scales and rebuilt equipment. We are the authorized Kirk Rudy Dealer in Southern California, Arizona and Southern Nevada.Mailers Engineering, Inc. is the leading independent business provider of a complete line
-            of new and rebuilt mailing products in the Southern California area, with the ability to select from a variety of manufacturers. In 1973 the organization was formed and dedicated to the support of the customer's needs, in both customer service
-            and product excellence. We strive to provide the most cost effective products in the mailing industry including equipment that are production oriented and trouble free with complete follow through and on-going service support at a reasonable
-            cost.
+            strapping machines, postage scales and rebuilt equipment. Mailers Engineering, Inc. is the leading independent business provider of a complete line of new and rebuilt mailing products in the Southern California area, with the ability to select
+            from a variety of manufacturers. In 1973 the organization was formed and dedicated to the support of the customer's needs, in both customer service and product excellence. We strive to provide the most cost effective products in the mailing
+            industry including equipment that are production oriented and trouble free with complete follow through and on-going service support at a reasonable cost.
 
         </div>
     </div>
@@ -45,21 +44,21 @@
     <table class="img-container">
         <tr>
             <td class="img-box">
-                <a href="tops.html"><img src="beautiful-carefree-casual-1271702.jpg" alt="woman in plaid shirt and long skirt" width="300" height="300"></a>
+                <a href="tops.html"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/AvailableMachines/IMG_8764.jpg" alt="woman in plaid shirt and long skirt" width="300" height="300"></a>
                 <a href="tops.html">
-                    <p>Tops</p>
+                    <p>Big Cool Machine-$5,000,000</p>
                 </a>
             </td>
             <td class="img-box">
-                <a href="bottoms.html"><img src="beautiful-blur-close-up-227288.jpg" alt="woman wearing jeans" width="300" height="300"></a>
+                <a href="bottoms.html"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/AvailableMachines/IMG_8765.jpg" alt="woman wearing jeans" width="300" height="300"></a>
                 <a href="bottoms.html">
-                    <p>Bottoms</p>
+                    <p>Big Cool Machine-$5,000,000</p>
                 </a>
             </td>
             <td class="img-box">
-                <a href="dresses.html"><img src="aircrafts-dawn-daylight-2413424.jpg" alt="woman wearing dress" width="300" height="300"></a>
+                <a href="dresses.html"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/AvailableMachines/IMG_8766.jpg" alt="woman wearing dress" width="300" height="300"></a>
                 <a href="dresses.html">
-                    <p>Dresses&Rompers</p>
+                    <p>Big Cool Machine-$5,000,000</p>
                 </a>
 
             </td>
@@ -99,14 +98,14 @@
     </div>
     <div class="menu">
         <div class="column">
-            <h1>SHOP</h1>
-            <p><a href="newarrivals.html">New Arrivals</a></p>
-            <p><a href="tops.html">Tops</a></p>
-            <p><a href="bottoms.html">Bottoms</a></p>
-            <p><a href="dresses.html">Dresses & Rompers</a></p>
-            <p><a href="outerwear.html">Outerwear</a></p>
-            <p><a href="accessories.html">Shoes & Accessories</a></p>
-            <p><a href="sale.html">Sale</a></p>
+            <h1>RESOURCES</h1>
+            <p><a href="Equipment.html">Equipment</a></p>
+            <p><a href="Feeders.html">Feeders</a></p>
+            <p><a href="Grutzmacher.html">Grutzmacher</a></p>
+            <p><a href="FTP&InkTypes.html">FTP & Ink Types</a></p>
+            <p><a href="DominoL400.html">DominoL400</a></p>
+            <p><a href="Data-pac.html">Data-Pac</a></p>
+
         </div>
         <div class="column">
             <h1>CONNECT</h1>
@@ -125,7 +124,7 @@
         </div>
     </div>
     <footer>
-        <p class="address">15350 Proctor Ave Unit A City of Industry, CA 92587</p>
+        <p class="address">15350 Proctor Ave Unit A City of Industry, CA 91745</p>
         <p class="phone">323-343-9750 </p>
         <p class="copyright"><i class="far fa-copyright"></i> 2020 Mailers Engineering Inc.</p>
     </footer>
