--- a/FTP&InkTypes.html
+++ b/FTP&InkTypes.html
@@ -43,7 +43,7 @@
             <td width="198">&nbsp;</td>
         </tr>
         <tr bgcolor="02021E">
-            <td height="57" nowrap="nowrap" colspan="2" id="tagline" valign="middle"><span class="style2">1647 Blake Avenue, Los Angeles, CA 90031 Phone: 323.343.9750 Fax: 323.343.9753</span> <br /> </td>
+            <td height="57" nowrap="nowrap" colspan="2" id="tagline" valign="middle"><span class="style2">15350 Proctor Ave Unit A City of Industry, CA 91745 Phone: 323.343.9750 Fax: 323.343.9753</span> <br /> </td>
             <td width="198">&nbsp;</td>
         </tr>
         <tr>
@@ -102,7 +102,7 @@
                                     or purging the heads.</p>
                                 <h3 class="subHeader">CM-796 Coated Fast Dry (Collins) </h3>
                                 <p class="style3">Alternative for the glossiest coated stocks when the CM-557 doesn't&rsquo;t work completely. Dries faster and smears less than the CM-557.&nbsp; Under some circumstances, the CM-796 may exhibit some ink splatter.&nbsp;
-                                    </p>
+                                </p>
                                 <h2 class="subHeader">CM-150 H and Hi-Speed (Collins) </h2>
                                 <p class="style3">Newer ink that prints at lower DPI while still producing a dark image. Cost effective ink that uses less ink to print similar dark images.</p>
                             </div>
