--- a/DominoL400.html
+++ b/DominoL400.html
@@ -56,7 +56,7 @@
                 <td width="96">&nbsp;</td>
             </tr>
             <tr bgcolor="02021E">
-                <td height="57" id="tagline" nowrap="nowrap" valign="middle"><span class="style2">1647 Blake Avenue, Los Angeles, CA 90031 Phone:323.343.9750 Fax: 323.343.9753 </span></td>
+                <td height="57" id="tagline" nowrap="nowrap" valign="middle"><span class="style2">15350 Proctor Ave Unit A City of Industry, CA 91745 Phone:323.343.9750 Fax: 323.343.9753 </span></td>
                 <td width="96">&nbsp;</td>
             </tr>
             <tr>
