--- a/Brochures.html
+++ b/Brochures.html
@@ -49,7 +49,7 @@
             <td width="302">&nbsp;</td>
         </tr>
         <tr bgcolor="02021E">
-            <td height="57" nowrap="nowrap" colspan="2" id="tagline" valign="middle"><span class="style2">1647 Blake Avenue, Los Angeles, CA 90031 Phone:323.343.9750 Fax: 323.343.9753</span> <br /> </td>
+            <td height="57" nowrap="nowrap" colspan="2" id="tagline" valign="middle"><span class="style2">15350 Proctor Ave Unit A City of Industry, CA 91745 Phone:323.343.9750 Fax: 323.343.9753</span> <br /> </td>
             <td width="302">&nbsp;</td>
         </tr>
         <tr>
