--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <a href="Links.html" class="btn tops">Videos/Web Support</a>
         <a href="bottoms.html" class="btn bottoms">Ink Recycle Policy</a>
     </div>
-    <div class="blog">
+    <div class="bio">
         <a href="#"><img src="Screen Shot 2019-08-13 at 2.08.16 PM.png" alt="women laughing together"></a>
-        <div class="blog-text">Mailers Engineering, Inc. has over 40 years of mailing equipment experience. We can provide small start-up mailing systems or large high speed production inkjet bases, tabbers, inserters, folders, feeders, labelers, stamp affixers, letter openers,
+        <div class="bio-text">Mailers Engineering, Inc. has over 40 years of mailing equipment experience. We can provide small start-up mailing systems or large high speed production inkjet bases, tabbers, inserters, folders, feeders, labelers, stamp affixers, letter openers,
             strapping machines, postage scales and rebuilt equipment. Mailers Engineering, Inc. is the leading independent business provider of a complete line of new and rebuilt mailing products in the Southern California area, with the ability to select
             from a variety of manufacturers. In 1973 the organization was formed and dedicated to the support of the customer's needs, in both customer service and product excellence. We strive to provide the most cost effective products in the mailing
             industry including equipment that are production oriented and trouble free with complete follow through and on-going service support at a reasonable cost.
