--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             <p><a href="FTP&InkTypes.html">FTP & Ink Types</a></p>
             <p><a href="DominoL400.html">DominoL400</a></p>
             <p><a href="Data-pac.html">Data-Pac</a></p>
+            <p><a href="#">Ink Recycle Policy</a></p>
 
         </div>
         <div class="column">
@@ -116,11 +117,15 @@
             </p>
         </div>
         <div class="column">
-            <h1>ABOUT</h1>
-            <p><a href="#">FAQ</a></p>
-            <p><a href="#">Technical Support</a></p>
+            <h1>Hours</h1>
+            <p><a href="#">Monday 8:00am-5:00pm</a></p>
+            <p><a href="#">Tuesday 8:00am-5:00pm</a></p>
+            <p><a href="#">Wednesday 8:00am-5:00pm</a></p>
+            <p><a href="#">Thursday 8:00am-5:00pm</a></p>
+            <p><a href="#">Friday 8:00am-5:00pm</a></p>
+            <p><a href="#">Saturday CLOSED</a></p>
+            <p><a href="#">Sunday CLOSED</a></p>
 
-            <p><a href="#">Ink Recycle Policy</a></p>
         </div>
     </div>
     <footer>
