--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
         </div>
         <div class="column">
             <h1>Hours</h1>
-            <p><a href="#">Monday 8:00am-5:00pm</a></p>
-            <p><a href="#">Tuesday 8:00am-5:00pm</a></p>
-            <p><a href="#">Wednesday 8:00am-5:00pm</a></p>
-            <p><a href="#">Thursday 8:00am-5:00pm</a></p>
-            <p><a href="#">Friday 8:00am-5:00pm</a></p>
-            <p><a href="#">Saturday CLOSED</a></p>
-            <p><a href="#">Sunday CLOSED</a></p>
+            <p><a>Monday 8:00am-5:00pm</a></p>
+            <p><a>Tuesday 8:00am-5:00pm</a></p>
+            <p><a>Wednesday 8:00am-5:00pm</a></p>
+            <p><a>Thursday 8:00am-5:00pm</a></p>
+            <p><a>Friday 8:00am-5:00pm</a></p>
+            <p><a>Saturday CLOSED</a></p>
+            <p><a>Sunday CLOSED</a></p>
 
         </div>
     </div>
