--- a/index.html
+++ b/index.html
@@ -63,26 +63,7 @@
 
             </td>
         </tr>
-        <tr>
-            <td class="img-box">
-                <a href="outerwear.html"><img src="sweater-nude.jpg" alt="woman wearing sweater and knit hat" width="300" height="300"></a>
-                <a href="outerwear.html">
-                    <p>Outerwear</p>
-                </a>
-            </td>
-            <td class="img-box">
-                <a href="accessories.html"><img src="scarf-tribal.jpg" atl="woman wearing scarf" width="300" height="300"></a>
-                <a href="accessories.html">
-                    <p>Shoes&Accessories</p>
-                </a>
-            </td>
-            <td class="img-box">
-                <a href="sale.html"><img src="beautiful-black-hat-fashion-2729638.jpg" alt="woman wearing jumpsuit" width="300" height="300"></a>
-                <a href="sale.html">
-                    <p>Sale</p>
-                </a>
-            </td>
-        </tr>
+
     </table>
 
 
@@ -123,8 +104,8 @@
             <p><a>Wednesday 8:00am-5:00pm</a></p>
             <p><a>Thursday 8:00am-5:00pm</a></p>
             <p><a>Friday 8:00am-5:00pm</a></p>
-            <p><a>Saturday CLOSED</a></p>
-            <p><a>Sunday CLOSED</a></p>
+            <p><a>Saturday-CLOSED</a></p>
+            <p><a>Sunday-CLOSED</a></p>
 
         </div>
     </div>
