--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
     <div class="bio">
 
         <div class="bio-text">Mailers Engineering, Inc. has over 40 years of mailing equipment experience. We can provide small start-up mailing systems or large high speed production inkjet bases, tabbers, inserters, folders, feeders, labelers, stamp affixers, letter openers,
-            strapping machines, postage scales and rebuilt equipment. Mailers Engineering, Inc. is the leading independent business provider of a complete line of new and rebuilt mailing products in the Southern California area, with the ability to select
-            from a variety of manufacturers. In 1973 the organization was formed and dedicated to the support of the customer's needs, in both customer service and product excellence. We strive to provide the most cost effective products in the mailing
-            industry including equipment that are production oriented and trouble free with complete follow through and on-going service support at a reasonable cost.
+            strapping machines, postage scales and rebuilt equipment.
+            <br>Mailers Engineering, Inc. is the leading independent business provider of a complete line of new and rebuilt mailing products in the Southern California area, with the ability to select from a variety of manufacturers.
+            <br>In 1973 the organization was formed and dedicated to the support of the customer's needs, in both customer service and product excellence. We strive to provide the most cost effective products in the mailing industry including equipment
+            that are production oriented and trouble free with complete follow through and on-going service support at a reasonable cost.
 
         </div>
     </div>
