--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="header-right">
             <a href="#"><i class="fas fa-search fa-2x"></i></a>
-            <a href="#"><i class="fas fa-envelope fa-2x"></i></a>
+            <a href="mailto:mailersengineering@gmail.com"><i class="fas fa-envelope fa-2x"></i></a>
         </div>
     </header>
     <div class="container">
