--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     </table>
 
 
-    <div class="testimonial">
-        <h1>What our customers are saying...</h1>
+    <div class="InkPolicy">
+        <h1>Ink Recycling Program Policy</h1>
         <p>"Practically my entire wardrobe is from Authentic Grace. I love that their clothes are simple, but stylish." - Carly B.</p>
         <br>
         <br>
