--- a/index.html
+++ b/index.html
@@ -70,13 +70,11 @@
 
     <div class="InkPolicy">
         <h1>Ink Recycling Program Policy</h1>
-        <p>"Practically my entire wardrobe is from Authentic Grace. I love that their clothes are simple, but stylish." - Carly B.</p>
-        <br>
-        <br>
-        <br>
-        <p>"With Authentic Grace, I've finally realized you don't have to sacrifice style for comfort." - Melissa G.</p>
-        <br>
-        <p>"As a stay-at-home-mom on a budget, I appreciate that Authentic Grace lets me be fashionable without breaking the bank." - Lindsey L.</p>
+        <p>
+            Looking for a way to save on your next ink purchase and help the environment?
+            <br><br>When you purchase your ink with Mailers Engineering Inc, you are then eligible to participate in our ink recycle program. Once you send us your empty cartidges, those that qualify, will create a credit to be used toward your next purchase
+            of ink with us.
+        </p>
     </div>
     <div class="menu">
         <div class="column">
