--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="header-left">
-            <a href="index.html" class="login">Home</a>
+            <a href="index.html" class="login"></a>
         </div>
         <div class="header-right">
             <a href="#"><i class="fas fa-search fa-2x"></i></a>
@@ -39,24 +39,24 @@
 
         </div>
     </div>
-    <div class="pic-title">
-        <h1>Available Machines</h1>
+    <div class="SaleItems">
+        <h1>What's Available</h1>
     </div>
-    <table class="img-container">
+    <table class="sale-container">
         <tr>
-            <td class="img-box">
+            <td class="sale-box">
                 <a href="tops.html"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/AvailableMachines/IMG_8764.jpg" alt="woman in plaid shirt and long skirt" width="300" height="300"></a>
                 <a href="tops.html">
                     <p>Big Cool Machine-$5,000,000</p>
                 </a>
             </td>
-            <td class="img-box">
+            <td class="sale-box">
                 <a href="bottoms.html"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/AvailableMachines/IMG_8765.jpg" alt="woman wearing jeans" width="300" height="300"></a>
                 <a href="bottoms.html">
                     <p>Big Cool Machine-$5,000,000</p>
                 </a>
             </td>
-            <td class="img-box">
+            <td class="sale-box">
                 <a href="dresses.html"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/AvailableMachines/IMG_8766.jpg" alt="woman wearing dress" width="300" height="300"></a>
                 <a href="dresses.html">
                     <p>Big Cool Machine-$5,000,000</p>
@@ -71,7 +71,7 @@
     <div class="InkPolicy">
         <h1>Ink Recycling Program Policy</h1>
         <p>
-            Looking for a way to save on your next ink purchase and help the environment?
+            <h2>Looking for a way to save on your next ink purchase and help the environment?</h2>
             <br><br>When you purchase your ink with Mailers Engineering Inc, you are then eligible to participate in our ink recycle program. Once you send us your empty cartidges, those that qualify, will create a credit to be used toward your next purchase
             of ink with us.
         </p>
