--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 <body>
     <header>
         <div class="header-left">
-            <a href="index.html" class="login"></a>
+            <a href="https://www.facebook.com/MailersEngineeringInc" target="_blank"><i class="fab fa-facebook fa-2x"></a></i>
+
+            <a href="https://www.yelp.com/biz/mailers-engineering-inc-city-of-industry?utm_campaign=www_business_share_popup&utm_medium=copy_link&utm_source=(direct)" target="_blank"><i class="fab fa-yelp fa-2x"></i></a></i>
+
+            <a href="https://www.linkedin.com/company/mailers-engineering/" target="_blank"><i class="fab fa-linkedin-in fa-2x"></a></i>
+
         </div>
         <div class="header-right">
             <a href="#"><i class="fas fa-search fa-2x"></i></a>
@@ -25,9 +30,8 @@
         <h1>Mailers Engineering Inc.</h1>
     </div>
     <div class="btn-wrapper">
-        <a href="Brochures.html" class="btn arrivals">Brochures</a>
-        <a href="Links.html" class="btn tops">Videos/Web Support</a>
-        <a href="bottoms.html" class="btn bottoms">Ink Recycle Policy</a>
+        <a href="Brochures.html" class="btn brochures">Brochures</a>
+        <a href="Links.html" class="btn links">Videos/Web Support</a>
     </div>
     <div class="bio">
 
@@ -90,7 +94,9 @@
             <h1>CONNECT</h1>
             <p class="social">
                 <a href="https://www.facebook.com/MailersEngineeringInc" target="_blank"><i class="fab fa-facebook fa-3x"></a></i>
+                <br><br>
                 <a href="https://www.yelp.com/biz/mailers-engineering-inc-city-of-industry?utm_campaign=www_business_share_popup&utm_medium=copy_link&utm_source=(direct)" target="_blank"><i class="fab fa-yelp fa-3x"></i></a></i>
+                <br><br>
                 <a href="https://www.linkedin.com/company/mailers-engineering/" target="_blank"><i class="fab fa-linkedin-in fa-3x"></a></i>
             </p>
         </div>
