--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
     </header>
     <div class="container">
+        <img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/logo_size_invert.jpg">
         <h1>Mailers Engineering Inc.</h1>
     </div>
     <div class="btn-wrapper">
