--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
     <table class="container">
         <tr>
             <td>
-                <a><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/logo_size_invert.jpg"></a>
+                <a><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/AvailableMachines/logo_size.jpg"></a>
             </td>
             <td>
-                <h1>Mailers Engineering Inc.</h1>
+                <h1>Mailers Engineering Inc</h1>
             </td>
+
         </tr>
 
     </table>
@@ -59,19 +60,19 @@
             <td class="sale-box">
                 <a href="tops.html"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/AvailableMachines/IMG_8764.jpg" alt="woman in plaid shirt and long skirt" width="300" height="300"></a>
                 <a href="tops.html">
-                    <p>Big Cool Machine-$5,000,000</p>
+                    <p><a href="mailto:mailersengineering@gmail.com">Big Cool Machine-$5,000,000<br>Contact Us!</a></p>
                 </a>
             </td>
             <td class="sale-box">
                 <a href="bottoms.html"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/AvailableMachines/IMG_8765.jpg" alt="woman wearing jeans" width="300" height="300"></a>
                 <a href="bottoms.html">
-                    <p>Big Cool Machine-$5,000,000</p>
+                    <p><a href="mailto:mailersengineering@gmail.com">Big Cool Machine-$5,000,000<br>Contact Us!</a></p>
                 </a>
             </td>
             <td class="sale-box">
                 <a href="dresses.html"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/AvailableMachines/IMG_8766.jpg" alt="woman wearing dress" width="300" height="300"></a>
                 <a href="dresses.html">
-                    <p>Big Cool Machine-$5,000,000</p>
+                    <p><a href="mailto:mailersengineering@gmail.com">Big Cool Machine-$5,000,000<br>Contact Us!</a></p>
                 </a>
 
             </td>
