--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
         <h1>Ink Recycling Program Policy</h1>
         <p>
             <h2>Looking for a way to save on your next ink purchase and help the environment?</h2>
-            <br><br>When you purchase your ink with Mailers Engineering Inc, you are then eligible to participate in our ink recycle program. Once you send us your empty cartidges, those that qualify, will create a credit to be used toward your next purchase
-            of ink with us.
+
+            <h3>When you purchase your ink with Mailers Engineering Inc, you are then eligible to participate in our ink recycle program. Once you send us your empty cartidges, those that qualify, will create a credit to be used toward your next purchase
+                of ink with us.</h3>
         </p>
     </div>
     <div class="menu">
