--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
     <table class="sale-container">
         <tr>
             <td class="sale-box">
-                <a href="tops.html"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/AvailableMachines/IMG_8764.jpg" alt="woman in plaid shirt and long skirt" width="300" height="300"></a>
-                <a href="tops.html">
+                <a href="mailto:mailersengineering@gmail.com"><img src="images/ForSaleImg/INKIMG_9035.jpg" alt="Picture Of Ink In Package" width="300" height="300"></a>
+                <a href="mailto:mailersengineering@gmail.com">
                     <p><a href="mailto:mailersengineering@gmail.com">Big Cool Machine-$5,000,000<br>Contact Us!</a></p>
                 </a>
             </td>
             <td class="sale-box">
-                <a href="bottoms.html"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/AvailableMachines/IMG_8765.jpg" alt="woman wearing jeans" width="300" height="300"></a>
-                <a href="bottoms.html">
+                <a href="mailto:mailersengineering@gmail.com"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/ForSaleImg/StrapIMG_9040.jpg" alt="Picture Of Strapping In Package" width="300" height="300"></a>
+                <a href="mailto:mailersengineering@gmail.com">
                     <p><a href="mailto:mailersengineering@gmail.com">Big Cool Machine-$5,000,000<br>Contact Us!</a></p>
                 </a>
             </td>
             <td class="sale-box">
-                <a href="dresses.html"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/AvailableMachines/IMG_8766.jpg" alt="woman wearing dress" width="300" height="300"></a>
-                <a href="dresses.html">
+                <a href="mailto:mailersengineering@gmail.com"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/ForSaleImg/TabIMG_9039.jpg" alt="Picture of Tabs On Roll" width="300" height="300"></a>
+                <a href="mailto:mailersengineering@gmail.com">
                     <p><a href="mailto:mailersengineering@gmail.com">Big Cool Machine-$5,000,000<br>Contact Us!</a></p>
                 </a>
 
