--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
     </header>
     <div class="container">
+        <img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/AvailableMachines/rsz_websiteheader3.jpg" alt="Vintage Mail Machine"></a>
         <h1>Mailers Engineering Inc</h1>
     </div>
     <div class="btn-wrapper">
@@ -50,19 +51,19 @@
             <td class="sale-box">
                 <a href="mailto:mailersengineering@gmail.com"><img src="images/ForSaleImg/INKIMG_9035.jpg" alt="Picture Of Ink In Package" width="300" height="300"></a>
                 <a href="mailto:mailersengineering@gmail.com">
-                    <p><a href="mailto:mailersengineering@gmail.com">Big Cool Machine-$5,000,000<br>Contact Us!</a></p>
+                    <p><a href="mailto:mailersengineering@gmail.com">Item# S228-Ink C8842A-$29.50<br>Variety of ink available<br>Contact Us!</a></p>
                 </a>
             </td>
             <td class="sale-box">
                 <a href="mailto:mailersengineering@gmail.com"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/ForSaleImg/StrapIMG_9040.jpg" alt="Picture Of Strapping In Package" width="300" height="300"></a>
                 <a href="mailto:mailersengineering@gmail.com">
-                    <p><a href="mailto:mailersengineering@gmail.com">Big Cool Machine-$5,000,000<br>Contact Us!</a></p>
+                    <p><a href="mailto:mailersengineering@gmail.com">Item# 6CL18-Clear 1/4"-$85.00<br>Pricing varies based on quantity purchased<br>Contact Us!</a></p>
                 </a>
             </td>
             <td class="sale-box">
                 <a href="mailto:mailersengineering@gmail.com"><img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/ForSaleImg/TabIMG_9039.jpg" alt="Picture of Tabs On Roll" width="300" height="300"></a>
                 <a href="mailto:mailersengineering@gmail.com">
-                    <p><a href="mailto:mailersengineering@gmail.com">Big Cool Machine-$5,000,000<br>Contact Us!</a></p>
+                    <p><a href="mailto:mailersengineering@gmail.com">Item# T205-1.5"-30k/roll-$1.95/1k<br>Multiple sizes/cases available<br>Contact Us!</a></p>
                 </a>
 
             </td>
