--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </header>
     <div class="container">
-        <img src="/Users/wurtz/Documents/GitHub/MailersEngineering/images/AvailableMachines/rsz_websiteheader3.jpg" alt="Vintage Mail Machine"></a>
+        <img src="rsz_websiteheader3.jpg" alt="Vintage Mail Machine"></a>
         <h1>Mailers Engineering Inc</h1>
     </div>
     <div class="btn-wrapper">
